--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         }
     },
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "ext-fileinfo": "*",
+        "ext-json": "*",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.x-dev"
