--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.x-dev"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
